--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import Layout from '../layouts/Layout.astro';
     <div class="absolute top-1/2 right-1/4 w-40 h-40 bg-pink-500 rounded-full opacity-20 animate-float delay-4s"></div>
     
     <div class="z-10 space-y-8">
-      <h1 class="text-5xl font-bold sm:text-6xl animate__animated animate__fadeIn">Soy Jostin Calderon/h1>
+      <h1 class="text-5xl font-bold sm:text-6xl animate__animated animate__fadeIn">Soy Jostin Calderon </h1>
       <p class="text-lg sm:text-xl animate__animated animate__fadeIn animate__delay-1s">Un desarrolador web apasionado que transforma ideas en experiencias digitales únicas y funcionales.</p>
       <a href="#contacto" class="px-8 py-4 text-xl bg-white text-black rounded-lg hover:bg-gray-200 hover:scale-105 transition-all duration-300 animate__animated animate__fadeIn animate__delay-2s">Contáctame</a>
     </div>
