--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ import Layout from '../layouts/Layout.astro';
     
     <div class="max-w-4xl mx-auto">
       <h2 class="text-3xl font-bold mb-6 animate__animated animate__fadeIn">Sobre mí</h2>
-      <p class="text-lg animate__animated animate__fadeIn animate__delay-1s">Soy un desarrollador web apasionado por crear soluciones visuales atractivas y funcionales. Mi enfoque es siempre en la experiencia del usuario y en optimizar cada detalle técnico.</p>
+      <p class="text-lg animate__animated animate__fadeIn animate__delay-1s px-4 sm:px-6 md:px-0 mx-auto">Soy un desarrollador web apasionado por crear soluciones visuales atractivas y funcionales. Mi enfoque es siempre en la experiencia del usuario y en optimizar cada detalle técnico.</p>
     </div>
  
   </section>
